# ecs_metadata

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  metadata.rs
