[package]
name = "ecs_metadata"
version = "0.1.0"
edition = "2021"
authors = ["sardusmatt <sardusmatt@incomingconnection.net>"]
description = "A simple wrapper to expose ECS container metadata"
repository = "https://github.com/sardusmatt/ecs_metadata"
license = "MIT"
readme = "README.md"
categories = ["api-bindings", "asynchronous", "web-programming"]
keywords = ["ecs", "aws", "metadata", "container"]

[dependencies]
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0.124"
